<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_one_shot" android:title="@string/one_shot"
          app:showAsAction="collapseActionView"/>
    <item android:id="@+id/action_take_picture" android:title="@string/take_picture"
          app:showAsAction="collapseActionView"/>
    <item android:id="@+id/action_successive_data" android:title="@string/successive_data"
        app:showAsAction="collapseActionView"/>
    <item android:id="@+id/action_periodic_data" android:title="@string/periodic_data"
        app:showAsAction="collapseActionView"/>
    <item android:id="@+id/action_show_log" android:title="@string/show_log"
          android:orderInCategory="100" app:showAsAction="always" />
</menu>
